@@ -9,6 +9,10 @@
 	overflow-x: auto;
 }
 
+#pages-tools-navigation .pages-tools-wrap {
+	white-space: normal;
+}
+
 .pages-tools-unpublished {
 	color: red;
 }
