@@ -3,6 +3,7 @@ x.x:
 
 - added: publication and expiration date for pages (optional and admin setting)
 - changed: no navigation tree with only one page
+- changed: no more wrapping of the first 5 levels of the navigation tree
 - fixed: #1 Undefined function on pdf export
 - fixed: small JS bug
 
